--- a/app/views/planets/_form.html.erb
+++ b/app/views/planets/_form.html.erb
@@ -5,7 +5,7 @@
    <% end %>
  </ul>
  <% end %>
-
+<div class="form">
 <%= form_for @planet do |f| %>
 <br/>
   <%= f.label :name %>
@@ -26,3 +26,4 @@
   <%= f.submit %>
 
 <% end %>
+</div>
